--- a/src/TheWorld/Views/App/Trips.cshtml
+++ b/src/TheWorld/Views/App/Trips.cshtml
@@ -10,14 +10,24 @@
    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0iUAtN8rmT6LVIEHrvs2ye0xh1de8vYg"></script>
     <script src="~/lib/gmaps/gmaps.min.js"></script>
     <script src="~/lib/travelmap/travelmap.js"></script> <!--travelmap dependent on gmaps so need to include that script also as reference-->
+
+<environment names="Development">
     <script src="~/js/simpleControls.js"></script>
     <script src="~/js/app-trips.js"></script>
     <script src="~/js/tripsController.js"></script>
     <script src="~/js/tripEditorController.js"></script>
-
+</environment>
 }
-<div class="row" ng-app="app-trips" >    
+<environment names="Production,Staging">
+    <script src="~/lib/_app/simpleControls.js"></script>
+    <script src="~/lib/_app/app-trips.js"></script>
+    <script src="~/lib/_app/tripsController.js"></script>
+    <script src="~/lib/_app/tripEditorController.js"></script>
+</environment>
+}
+
+<div class="row" ng-app="app-trips">
     @*<div class="col-md-6 col-md-offset-3">*@
-        <div ng-view></div>
+    <div ng-view></div>
     @* </div> *@
 </div>
